# service/register.go
@@ -65,5 +65,6 @@ func RegisterAPIServices(path string, r *mux.Router) {
 	api.HandleFunc("/network-traffic-recording", NetworkTrafficStartHandler).Methods("POST")
 	api.HandleFunc("/network-traffic-recording", NetworkTrafficStopHandler).Methods("DELETE")
 	api.HandleFunc("/remote-exchange", RemoteExchange).Methods("POST")
+	api.HandleFunc("/config/{name}", ConfigDelete).Methods("DELETE")
 
 }
